feat: seed database on deployment via vercel-deploy script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:studio": "prisma studio",
     "db:deploy": "prisma migrate deploy",
     "dev": "next dev",
-    "vercel-deploy": "npm run build && npm run db:deploy",
+    "vercel-deploy": "npm run build && npm run db:deploy && npx prisma db seed",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
